<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sergio.t1_17ej_pasoparametros.MainActivity">

    <Button
        android:id="@+id/actividad1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actividad1" />

    <Button
        android:id="@+id/actividad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actividad2" />

    <Button
        android:id="@+id/actividad3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actividad3" />

    <Button
        android:id="@+id/actividad4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actividad4" />

    <Button
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir" />
</LinearLayout>