<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sergio.t1_17ej_pasoparametros.Actividad1"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"/>

    <EditText
        android:id="@+id/act1_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellidos"/>

    <EditText
        android:id="@+id/act1_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/act1_verificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verificar"/>

    <TextView
        android:id="@+id/act1_condiciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptas_condiciones"/>

    <Button
        android:id="@+id/act1_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"/>
</LinearLayout>
